trunk/Archive2/ac/2e94459840ac15/output
main.cpp:7:9: error: ‘f’ does not name a type
         f a = 11;
         ^
main.cpp: In function ‘int main()’:
main.cpp:14:20: error: ‘struct N::A’ has no member named ‘a’
     std::cout << a.a << '\n';
                    ^
