trunk/Archive2/ac/2e94459840ac15/main.cpp
#include <iostream>

typedef int f;
namespace N{
    struct A{
        void f(int);
        f a = 11;
    };
}

int main()
{
    N::A a;
    std::cout << a.a << '\n';
}